Se completa Refactor y se documenta